fix spacing in abaout me

--- a/style/style.css
+++ b/style/style.css
@@ -3,18 +3,14 @@ body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
-         
-         /*background-color: #f9f9f9;*/
          background-image: conic-gradient(lightgray, black,#f9f9f9);
 }
-
 
       img{
         margin-top: 12px;
         border-radius: 14px;
       }
 
-    
       .outer-container {
         max-width: 1200px;
         margin: 0 auto;
@@ -49,7 +45,7 @@ body {
         padding: 40px;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        text-align: justify;
+        /*text-align: justify;*/
       }
 
       .headshot {
